# yolo_tensorrt_demo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  baseline_benchmark.py  baseline_results.txt  run_demo.sh
include/: yolo_infer.h  yolo_infer.hpp
results/: baseline_benchmark.csv  baseline_results.txt  cpp_benchmark.csv  cpp_cuda_pre.csv  cpp_end2end_fp16.csv  cpp_fp16_baseline.csv
scripts/: baseline_benchmark.py  export_onnx.py  plot_comparison.py  verify_onnx.py
src/: benchmark.cpp  build_engine.cpp  main.cpp  preprocess.cu  yolo_infer.cpp
